# ScheduleBuilder

./: .gitignore  Launch Schedule Builder.bat  Launch Schedule Builder.vbs  README.md  pyproject.toml  requirements.txt
artifacts/: Sep21_Oct18_Schedule.xlsx
examples/: sep21_oct18_2026.json
schedule_builder/: __init__.py  cli.py  config.py  domain.py  errors.py  excel.py  gui.py  gui_state.py  gui_widgets.py  history.py  optimizer.py  rules.py  service.py
tests/: helpers.py  test_config.py  test_gui_state.py  test_history.py  test_optimizer.py
